// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Announcers component renders correctly 1`] = `
<div
  aria-live="assertive"
  class="announcers"
/>
`;

exports[`The Footer component renders correctly 1`] = `
<footer
  class="footer"
/>
`;

exports[`The Header component renders correctly 1`] = `
<aside
  class="header"
/>
`;

exports[`The Layout component renders child components in the correct positions 1`] = `
<div
  class="root"
>
  <div
    class="navigationBar"
  >
    NavigationBar
  </div>
  <div
    aria-live="assertive"
    class="announcers"
  >
    Announcers
  </div>
  <div
    class="page"
  >
    <aside
      class="header"
    >
      Header
    </aside>
    <div
      aria-live="assertive"
      class="toasts"
    >
      Toasts
    </div>
    <div
      class="body"
    >
      <div
        class="bodyInner"
      >
        <div
          class="sidebar"
        >
          <div
            class="sidebarInner"
          >
            Sidebar
          </div>
        </div>
        <main
          class="content"
        >
          <div>
            My content
          </div>
        </main>
      </div>
    </div>
    <footer
      class="footer"
    >
      Footer
    </footer>
  </div>
</div>
`;

exports[`The Layout component renders correctly 1`] = `
<div
  class="root"
>
  <div
    class="page"
  >
    <div
      class="body"
    >
      <div
        class="bodyInner"
      >
        <main
          class="content"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`The NavigationBar component renders correctly 1`] = `
<div
  class="navigationBar"
/>
`;

exports[`The Sidebar component renders correctly 1`] = `
<div
  class="sidebar"
>
  <div
    class="sidebarInner"
  />
</div>
`;

exports[`The Toasts component renders correctly 1`] = `
<div
  aria-live="assertive"
  class="toasts"
/>
`;
